Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight_Ready__e/Coaching_Insight_Ready__e.object-meta.xml
<CustomObject>
    <description>Published when a Coaching Insight analysis completes, so UI components can update in real time.</description>
    <label>Coaching Insight Ready</label>
    <pluralLabel>Coaching Insight Ready Events</pluralLabel>
</CustomObject>