Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight_Ready__e/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>