Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight_Ready__e/fields/Insight_Id__c.field-meta.xml
<CustomField>
    <fullName>Insight_Id__c</fullName>
    <label>Insight Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>