Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight_Ready__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>