Service Cloud/Coaching Intelligence/force-app/main/default/objects/Coaching_Insight_Ready__e/fields/Sentiment_Rating__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Rating__c</fullName>
    <label>Sentiment Rating</label>
    <length>20</length>
    <type>Text</type>
</CustomField>